.jjconflict-side-1/apps/jellyfin/overlays/nishir-tailnet/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jellyfin-tailscale
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale-system
      ports:
        - port: https
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: jellyfin
      app.kubernetes.io/name: jellyfin
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jellyfin-vmagent
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: flux-system
          podSelector:
            matchLabels:
              app.kubernetes.io/component: vmagent
              app.kubernetes.io/instance: victoriametrics
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: jellyfin
  policyTypes:
    - Ingress
